# repo-search

./: .gitignore  Cargo.toml  Makefile  README.md
.beads/: .gitignore
docs/: chatbot-architecture.md
docs/plans/: 2026-01-31-feat-native-repo-update-and-selective-reindex-plan.md  2026-02-01-feat-repo-pinning-and-drag-reorder-plan.md  2026-02-01-search-improvements-prd.md  2026-02-01-search-improvements-spec.md  2026-02-02-feat-search-pipeline-improvements-plan.md
src/: config.rs  lib.rs  main.rs  models.rs  state.rs
src/api/: chat.rs  mod.rs  repos.rs  search.rs
src/chunking/: ast.rs  fallback.rs  mod.rs
src/git/: clone.rs  mod.rs
src/llm/: chat_stream.rs  cross_encoder.rs  embeddings.rs  mod.rs  query_expand.rs  rerank.rs
src/search/: bm25.rs  hybrid.rs  mod.rs  vector.rs
static/: index.html
tests/: integration_test.rs
