[package]
name = "repo-search"
version = "0.1.0"
edition = "2021"
description = "Clone and search git repos with BM25, vector search, and LLM re-ranking"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }


# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Git operations
git2 = { version = "0.20", features = ["vendored-libgit2", "vendored-openssl"] }

# Full-text search (BM25)
tantivy = "0.25"

# HTTP client (for Ollama / cloud LLM APIs)
reqwest = { version = "0.13", features = ["json", "stream"] }
futures-util = "0.3"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3"
